objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_Approvals_List_Price_Decrease__c</fullName>
        <formula>IF((SBQQ__ListPrice__c &lt;  SBQQ__OriginalPrice__c ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approvals List Price Decrease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Average_Services_Price__c</fullName>
        <description>Used to populate services amount on parent quote line.</description>
        <label>Average Services Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Discounted_By_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Simplus - Override to &quot;Component Discounted By Package&quot; field. Allows this functionality to be added to the &quot;Standard Line Item Drawer&quot; field set.</description>
        <label>Discounted By Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Effective_End_Date__c</fullName>
        <description>Calculated end date based on start date plus term.</description>
        <inlineHelpText>Calculated end date based on start date plus term.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQ_Effective_Start_Date__c</fullName>
        <formula>IF(NOT(ISBLANK(SBQQ__StartDate__c)),
SBQQ__StartDate__c,
IF(NOT(ISBLANK(SBQQ__Group__r.SBQQ__StartDate__c)),
SBQQ__Group__r.SBQQ__StartDate__c,
SBQQ__Quote__r.SBQQ__StartDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQ_Is_Bundle__c</fullName>
        <formula>ISPICKVAL(SBQQ__Product__r.CPQ_Bundle_or_A_La_Carte__c, &quot;Bundle&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Is_First_Time_Price_Rules_Fire__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Simplus - This is a control field to distinguish initialized default values from override values entered by users. It should be set to false in the last price action in the calculation sequence.</description>
        <label>Is First Time Price Rules Fire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_License_Agreement_Name__c</fullName>
        <description>Used to populate conditional agreement checkboxes on quote object.</description>
        <label>License Agreement Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PE + IFX</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_License_Type__c</fullName>
        <formula>SBQQ__Product__r.License_Type_INF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Maintenance_Is_Required__c</fullName>
        <formula>(CPQ_License_Type__c = &quot;Perpetual&quot; || CPQ_License_Type__c = &quot;Term&quot;) &amp;&amp; !SBQQ__Product__r.CPQ_Maintenance_Optional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Original_List_Price__c</fullName>
        <formula>SBQQ__OriginalPrice__c</formula>
        <label>Original List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Parent_Is_Maintenance_Required__c</fullName>
        <formula>IF(ISBLANK(SBQQ__RequiredBy__c),FALSE,SBQQ__RequiredBy__r.CPQ_Maintenance_Is_Required__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Is Maintenance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Type__c</fullName>
        <formula>TEXT( SBQQ__Product__r.Product_Type_INF__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Quantity_Controlled_By_Parent__c</fullName>
        <formula>SBQQ__ProductOption__r.CPQ_Quantity_Controlled_By_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Controlled By Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Quantity_Is_Below_Minimum_Quantity__c</fullName>
        <formula>SBQQ__Quantity__c &lt;  SBQQ__Product__r.SBQQ__DefaultQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Is Below Minimum Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Renewal_Net_Price_Decrease__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(SBQQ__RenewedSubscription__c )),( SBQQ__NetPrice__c &lt; Renewal_Net_Price__c )),true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Net Price Decrease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Renewal_Quantity_Decrease__c</fullName>
        <formula>IF( 
AND(NOT(ISBLANK(SBQQ__RenewedSubscription__c )),( SBQQ__Quantity__c &lt; SBQQ__PriorQuantity__c )),true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Quantity Decrease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Required_By_Product_Code__c</fullName>
        <formula>SBQQ__RequiredBy__r.SBQQ__ProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required By Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Services_Discount__c</fullName>
        <description>Used to populate services amount on parent quote line.</description>
        <label>Services Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Services_Gross_Price__c</fullName>
        <description>Used to populate services amount on parent quote line.</description>
        <label>Services Gross Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Services_Net_Price__c</fullName>
        <description>Used to populate services amount on parent quote line.</description>
        <label>Services Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Services_Quantity__c</fullName>
        <description>Used to populate services amount on parent quote line.</description>
        <label>Services Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Term_Display_Field__c</fullName>
        <formula>IF(ISBLANK(CPQ_Effective_End_Date__c),
&quot;n/a&quot;,
TEXT(MONTH(CPQ_Effective_Start_Date__c)) 
&amp; &quot;/&quot; 
&amp; TEXT(DAY(CPQ_Effective_Start_Date__c)) 
&amp; &quot;/&quot; 
&amp; TEXT(YEAR(CPQ_Effective_Start_Date__c))
&amp; &quot; - &quot; 
&amp; TEXT(MONTH(CPQ_Effective_End_Date__c)) 
&amp; &quot;/&quot; 
&amp; TEXT(DAY(CPQ_Effective_End_Date__c)) 
&amp; &quot;/&quot; 
&amp; TEXT(YEAR(CPQ_Effective_End_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start/End Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_USD_List_Total__c</fullName>
        <description>For Approvals - USD version of List Total field, for multicurrency.</description>
        <label>USD List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_USD_Net_Total__c</fullName>
        <description>For Approvals - USD version of Net Total field, for multicurrency.</description>
        <label>USD Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_INF__c</fullName>
        <formula>CPQ_Effective_End_Date__c</formula>
        <label>End Date INF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INF_Product_Family__c</fullName>
        <label>INF Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attivio</fullName>
                </value>
                <value>
                    <fullName>CBOE</fullName>
                </value>
                <value>
                    <fullName>ChemDraw Cloud</fullName>
                </value>
                <value>
                    <fullName>ChemOffice</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Elements</fullName>
                </value>
                <value>
                    <fullName>E-Notebook</fullName>
                </value>
                <value>
                    <fullName>High Content Profiler</fullName>
                </value>
                <value>
                    <fullName>iLab</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>InfomatiX</fullName>
                </value>
                <value>
                    <fullName>Lead Discovery Research</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Signals Lead Discovery</fullName>
                </value>
                <value>
                    <fullName>Signals Notebook</fullName>
                </value>
                <value>
                    <fullName>Signals Screening</fullName>
                </value>
                <value>
                    <fullName>Signals Translational</fullName>
                </value>
                <value>
                    <fullName>Special License</fullName>
                </value>
                <value>
                    <fullName>Special Maintenance</fullName>
                </value>
                <value>
                    <fullName>Special SAAS</fullName>
                </value>
                <value>
                    <fullName>StreamBase</fullName>
                </value>
                <value>
                    <fullName>Special Subscription</fullName>
                </value>
                <value>
                    <fullName>Special Term</fullName>
                </value>
                <value>
                    <fullName>ChemDraw Professional</fullName>
                </value>
                <value>
                    <fullName>ChemDraw Prime</fullName>
                </value>
                <value>
                    <fullName>Translational</fullName>
                </value>
                <value>
                    <fullName>Spotfire</fullName>
                </value>
                <value>
                    <fullName>Lead Discovery Biologics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Net_Price__c</fullName>
        <formula>IF(NOT(ISBLANK(SBQQ__RenewedSubscription__c)), SBQQ__RenewedSubscription__r.SBQQ__NetPrice__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date_INF__c</fullName>
        <formula>CPQ_Effective_Start_Date__c</formula>
        <label>Start Date INF</label>
        <type>Date</type>
    </fields>
</CustomObject>